- moved the careers pdfs to a new folder - modified added vertical spacing for page sections - adjusted spacing in subscription form - about page text change - careers list display in both careers page and connect page - text corrections

--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -97,10 +97,8 @@ h3 {
   }
 }
 h2 {
-  a {
     color: $grey_dark;
     font-size: $largest;
-  }
 }
 h3 {
   font-size: $larger;
