--- a/_scss/widgets/forms.scss
+++ b/_scss/widgets/forms.scss
@@ -1,6 +1,6 @@
 
 .form-item {
-  margin: 1em 0;
+  margin: 0.3em 0;
 }
 
 .form-text {
